# GUI-Agent

./: .gitignore  README.md  pyproject.toml
configs/: osworld_qwen36.env.example  rule_mock.json
docs/: merlin_devbox_qwen36_osworld_deployment.md
examples/: mock_osworld_task.json  osworld_minimal_infeasible_task.json
scripts/: check_osworld_ready.sh  check_qwen36_endpoint.sh  check_qwen36_endpoint_worker.sh  debug_qwen36_local_load_worker.py  enter_persistent_runtime_env.sh  eval_osworld_qwen36.sh  gpu_keepalive_worker.py  inspect_qwen36_key_match.py  install_qwen36_local_worker_deps.sh  install_runtime_deps.sh  launch_qwen36_vllm_mlx.sh  probe_osworld_host.sh  run_local_browser_gui_smoke.sh  run_osworld_provider_probe.sh  run_osworld_qwen36.sh  run_qwen36_agent_smoke_worker.sh  run_qwen36_local_agent_smoke_worker.sh  run_qwen36_local_browser_gui_worker.sh  start_gpu_keepalive_worker.sh  start_qwen36_endpoint_worker.sh  start_qwen36_transformers_endpoint_worker.sh
src/vlm_memory_agent/: __init__.py  __main__.py  agent.py  cli.py  eval.py  osworld_eval.py  osworld_ready.py  preflight.py  qwen36_healthcheck.py  runtime_paths.py  serve_qwen36.py  serve_qwen36_transformers.py
src/vlm_memory_agent/api/: __init__.py  server.py
src/vlm_memory_agent/core/: __init__.py  types.py
src/vlm_memory_agent/envs/: __init__.py  base.py  local_browser.py  mock_osworld.py  osworld_adapter.py  osworld_runner.py
src/vlm_memory_agent/llm/: __init__.py  base.py  openai_compatible.py  qwen36_compat.py  qwen36_local.py  rule_based.py
tests/: test_smoke.py
(+7 files in other folders)
